blockquote style & readme

--- a/lib/contents.less
+++ b/lib/contents.less
@@ -7,11 +7,9 @@ hr {
 /*
     blockquote
 */
-@blockquote-color: hsl(0, 0, 80%);
-
 blockquote {
-    padding     : 0.9em 1.3em;
+    padding     : 1em 1.3em 1px;
 
-    border-left : 1em solid @blockquote-color;
-    box-shadow  : 2px 2px .3em lighten(@blockquote-color, 5%);
+    border-left : 1em solid hsl(0, 0%, 80%);
+    background-color: hsl(0, 0%, 98%);
 }
